--- a/res/values-zh-rCN/liquid_strings.xml
+++ b/res/values-zh-rCN/liquid_strings.xml
@@ -130,27 +130,27 @@
   <string name="pulse_length_short">短</string>
   <string name="pulse_length_normal">普通</string>
   <string name="pulse_length_long">长</string>
-  <string name="pulse_length_very_long">Very long</string>
-  <string name="pulse_speed_very_fast">Very fast</string>
-  <string name="pulse_speed_fast">Fast</string>
+  <string name="pulse_length_very_long">非常长</string>
+  <string name="pulse_speed_very_fast">非常快</string>
+  <string name="pulse_speed_fast">快</string>
   <string name="pulse_speed_normal">正常</string>
-  <string name="pulse_speed_slow">Slow</string>
-  <string name="pulse_speed_very_slow">Very slow</string>
-  <string name="battery_light_title">Battery light</string>
-  <string name="battery_low_pulse_title">Pulse if battery low</string>
-  <string name="battery_light_list_title">Colors while charging</string>
-  <string name="battery_light_low_color_title">Battery low</string>
-  <string name="battery_light_medium_color_title">Medium charge</string>
-  <string name="battery_light_full_color_title">Fully charged</string>
-  <string name="app_security_title">App security</string>
-  <string name="privacy_guard_dlg_title">Enable Privacy Guard?</string>
-  <string name="privacy_guard_dlg_text">When Privacy Guard is enabled, the app will not be able to access personal data such as contacts, messages, location or call logs.</string>
+  <string name="pulse_speed_slow">慢</string>
+  <string name="pulse_speed_very_slow">非常慢</string>
+  <string name="battery_light_title">电量指示灯</string>
+  <string name="battery_low_pulse_title">电量低时开启呼吸灯</string>
+  <string name="battery_light_list_title">在充电时的颜色</string>
+  <string name="battery_light_low_color_title">电量低</string>
+  <string name="battery_light_medium_color_title">半载</string>
+  <string name="battery_light_full_color_title">充电完成</string>
+  <string name="app_security_title">应用安全</string>
+  <string name="privacy_guard_dlg_title">启用隐私警卫吗？</string>
+  <string name="privacy_guard_dlg_text">启用隐私警卫后，应用程序将不能够访问个人数据，如联系人、 邮件、 位置或呼叫日志。</string>
   <string name="privacy_guard_dlg_system_app_text">When enabling Privacy Guard for a built-in app, the app will not be able to access personal data such as contacts, messages, location or call logs. This may cause other apps to misbehave.</string>
-  <string name="privacy_guard_default_title">Enabled by default</string>
+  <string name="privacy_guard_default_title">默认情况下启用</string>
   <string name="privacy_guard_default_summary">Do not access personal data by default for newly-installed apps</string>
-  <string name="privacy_guard_notification_title">Notification</string>
-  <string name="privacy_guard_notifiation_summary">Show notification if privacy guard is active.</string>
-  <string name="privacy_guard_manager_title">Privacy Guard</string>
+  <string name="privacy_guard_notification_title">通知</string>
+  <string name="privacy_guard_notifiation_summary">显示通知是否隐私权保护处于活动状态。</string>
+  <string name="privacy_guard_manager_title">隐私卫士</string>
   <string name="privacy_guard_manager_summary">Manage which apps have access to your personal data and other apps permissions</string>
   <string name="privacy_guard_no_user_apps">No apps are installed</string>
   <string name="privacy_guard_filter_does_not_match">No apps with relevant permissions are installed</string>
@@ -160,27 +160,27 @@
   <string name="privacy_guard_app_ops_detail_dialog_title">注意</string>
   <string name="privacy_guard_app_ops_detail_dialog_text">Selected app does not request permissions which access personal data. Do you want to modify the other permissions?</string>
   <string name="privacy_guard_app_ops_detail_reset_dialog_text">Reset all permissions back to default?</string>
-  <string name="app_ops_btn_text">Modify</string>
+  <string name="app_ops_btn_text">编辑</string>
   <string name="app_ops_no_item_text">This app has no changeable permissions.</string>
   <string name="wifi_setting_countrycode_title">Wi-Fi region code</string>
   <string name="wifi_setting_countrycode_summary">Specify the region code for Wi-Fi</string>
   <string name="wifi_setting_countrycode_error">There was a problem setting the region code.</string>
-  <string name="wifi_setting_countrycode_disabled">Enable Wi-Fi to change this option.</string>
-  <string name="wifi_menu_forget_all">Forget all networks</string>
-  <string name="wifi_setting_priority_title">Wi-Fi priority</string>
-  <string name="wifi_setting_priority_summary">Specify the priority of the Wi-Fi networks</string>
-  <string name="wifi_display_summary">Screen mirroring on another device</string>
+  <string name="wifi_setting_countrycode_disabled">启用 Wi-Fi 才能更改该选项。</string>
+  <string name="wifi_menu_forget_all">取消保存所有网络</string>
+  <string name="wifi_setting_priority_title">Wi-Fi 连接优先</string>
+  <string name="wifi_setting_priority_summary">设置各个 Wi-Fi 网络的优先连接顺序</string>
+  <string name="wifi_display_summary">屏幕上的另一个设备的镜像，</string>
   <string name="status_bar_title">状态栏</string>
   <string name="status_bar_style_title">风格</string>
   <string name="status_bar_general_title">常规</string>
-  <string name="status_bar_clock">Clock and date</string>
-  <string name="status_bar_clock_title">Clock and date style</string>
-  <string name="clock_title_enable">Alignment</string>
-  <string name="clock_color_title">Color</string>
-  <string name="status_bar_clock_style_reset">Reset color</string>
-  <string name="status_bar_show_clock_title">Show clock and date</string>
-  <string name="status_bar_am_pm_title">AM/PM</string>
-  <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
+  <string name="status_bar_clock">时钟和日期</string>
+  <string name="status_bar_clock_title">时钟和日期样式</string>
+  <string name="clock_title_enable">对齐</string>
+  <string name="clock_color_title">颜色：</string>
+  <string name="status_bar_clock_style_reset">重置颜色</string>
+  <string name="status_bar_show_clock_title">显示时钟和日期</string>
+  <string name="status_bar_am_pm_title">上午/下午</string>
+  <string name="status_bar_am_pm_info">24 小时时钟已启用</string>
   <string name="enable_clock_weekday">Day of the week</string>
   <string name="enable_clock_weekday_summary">请将屏幕关闭以便测试新的指示灯设置. 关闭此对话框将停止测试.</string>
   <string name="right_clock">时间局右</string>
@@ -535,9 +535,9 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
   <string name="battery_color_title">Battery color</string>
   <string name="circle_battery_animation_speed">Circle animation speed</string>
   <string name="circle_battery_animation_speed_none">None</string>
-  <string name="circle_battery_animation_speed_slow">Slow</string>
+  <string name="circle_battery_animation_speed_slow">慢</string>
   <string name="circle_battery_animation_speed_stock">正常</string>
-  <string name="circle_battery_animation_speed_fast">Fast</string>
+  <string name="circle_battery_animation_speed_fast">快</string>
   <string name="battery_text_color">Percentage text color</string>
   <string name="battery_bolt_color">Bolt charging color</string>
   <string name="battery_text_charging_color">Percentage text charging color (15-89%)</string>
@@ -840,6 +840,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
   <string name="title_tile_wifiap">Wi-Fi AP</string>
   <string name="title_tile_wifi">Wi-Fi</string>
   <string name="title_tile_user">User switcher</string>
+  <string name="title_tile_network_adb">ADB over network</string>
   <string name="title_tile_networkmode">Network mode</string>
   <string name="title_tile_nfc">NFC</string>
   <string name="title_tile_screen_timeout">Screen timeout</string>
@@ -1124,7 +1125,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
   <string name="pa_pie_mode_bare">Bare</string>
   <string name="pa_pie_mode_quick">Quick</string>
   <string name="pa_pie_mode_default">默认</string>
-  <string name="pa_pie_mode_slow">Slow</string>
+  <string name="pa_pie_mode_slow">慢</string>
   <string name="pa_pie_size_title">Pie size</string>
   <string name="pa_pie_size_summary">Define Pie controls size</string>
   <string name="pa_pie_size_small">Small</string>
@@ -1203,7 +1204,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
   <string name="volume_steps_alarm_title">Alarm</string>
   <string name="volume_steps_dtmf_title">DTMF</string>
   <string name="volume_steps_music_title">Music</string>
-  <string name="volume_steps_notification_title">Notification</string>
+  <string name="volume_steps_notification_title">通知</string>
   <string name="volume_steps_ring_title">Ringer</string>
   <string name="volume_steps_system_title">System</string>
   <string name="volume_steps_voice_call_title">Voice Call</string>
@@ -1356,7 +1357,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
   <string name="battery_saver_network_cdma_title">CDMA Networks</string>
   <string name="battery_saver_system_title">System options</string>
   <string name="development_shortcut_title">Development shortcut</string>
-  <string name="development_shortcut_summary">Enable \'wipe data\' and \'force close\' options in notification area and recent apps list</string>
+  <string name="development_shortcut_summary">Enable application management shortcuts in notification area and recent apps list</string>
   <string name="custom_runtime_warning_title">Warning</string>
   <string name="custom_runtime_warning_message">ART is not supported by LiquidSmooth. This setting is included for experimentation only and has the potential to cause instability, crashes, data loss or prevent the proper boot of your device. Visit &lt;a href=\"http://source.android.com/devices/tech/dalvik/art.html\"&gt;Introducing ART&lt;/a&gt; for more information.&lt;br/&gt;&lt;br/&gt;We request you do not file bug reports if you have enabled ART as your runtime.&lt;br/&gt;&lt;br/&gt;Are you sure you want to reboot to change runtime from <xliff:g id="old" example="libdvm.so">%1$s</xliff:g> to <xliff:g id="new" example="libart.so">%2$s</xliff:g>?</string>
   <string name="rominfo_settings_list_item_title">LiquidSmooth Statistics</string>
@@ -1604,7 +1605,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
   <string name="network_traffic_autohide_summary">Hide monitor when there is no activity</string>
   <string name="network_traffic_autohide_threshold">Inactivity threshold</string>
   <string name="network_traffic_color_style">Color style</string>
-  <string name="network_traffic_color_reset">Reset color</string>
+  <string name="network_traffic_color_reset">重置颜色</string>
   <string name="network_traffic_color_reset_message">Reset network traffic color to default?</string>
   <string name="status_bar_double_tap_to_sleep_title">Double-tap to sleep</string>
   <string name="status_bar_double_tap_to_sleep_summary">Double-tap the status bar to goto sleep</string>
@@ -1957,7 +1958,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
   <string name="voice_tts_clock_summary">Enable/disable speak for clock after screen turn on</string>
   <string name="voice_tts_date_title">日期</string>
   <string name="voice_tts_date_summary">Enable/disable speak for date after screen turn on</string>
-  <string name="voice_tts_notif_title">Notification</string>
+  <string name="voice_tts_notif_title">通知</string>
   <string name="voice_tts_notif_summary">Enable/disable speak for new notification</string>
   <string name="voice_tts_notif_read_title">Read new notifications</string>
   <string name="voice_tts_notif_read_summary">Enable/disable speak for Read New messages from notifications</string>
@@ -2154,6 +2155,8 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
   <string name="overscroll_summary">Choose how scrollable objects look when they overshoot</string>
   <string name="overscroll_weight_title">Over scrolling weight</string>
   <string name="overscroll_weight_summary">Select the weight of the scrollable objects</string>
+  <string name="disable_carrier_logo">Enable carrier logo</string>
+  <string name="carrier_logo_summary">Shows carrier logo in status bar</string>
   <string name="liquid_settings_title">LiquidSmooth</string>
   <string name="liquid_sound_title">LiquidSmooth sound</string>
   <string name="liquid_sound_summary">All sound related settings that we have added</string>
@@ -2166,4 +2169,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
   <string name="wifi_ap_clients_title">Connected devices</string>
   <string name="wifi_ap_client_ap_disabled">Hotspot is disabled</string>
   <string name="wifi_ap_client_none_connected">No devices connected</string>
+  <string name="sar_info">Maximum SAR</string>
+  <string name="maximum_head_level">Head: %1$s W/kg</string>
+  <string name="maximum_body_level">Body: %1$s W/kg</string>
 </resources>
