--- a/res/values-de/liquid_strings.xml
+++ b/res/values-de/liquid_strings.xml
@@ -360,7 +360,7 @@ Zusätzliche Optionen werden durch Gedrückthalten der Zeile angezeigt. Mit \"Be
   <string name="shortcut_action_power_off">Ausschalten</string>
   <string name="shortcut_action_reboot">Neustart</string>
   <string name="shortcut_action_sound">Ton</string>
-  <string name="shortcut_action_profiles">Profil</string>
+  <string name="shortcut_action_profiles">Profile</string>
   <string name="shortcut_action_app">Benutzerdefinierte Anwendung</string>
   <string name="shortcut_action_home">Startseite</string>
   <string name="shortcut_action_back">Zurück</string>
@@ -809,6 +809,7 @@ Zusätzliche Optionen werden durch Gedrückthalten der Zeile angezeigt. Mit \"Be
   <string name="title_tile_wifiap">WLAN-Hotspot</string>
   <string name="title_tile_wifi">Wi-Fi</string>
   <string name="title_tile_user">Benutzer-Wechseln</string>
+  <string name="title_tile_network_adb">ADB übers Netzwerk</string>
   <string name="title_tile_networkmode">Netzwerkmodus</string>
   <string name="title_tile_nfc">NFC</string>
   <string name="title_tile_screen_timeout">Bildschirm-Timeout</string>
@@ -1108,7 +1109,7 @@ Zusätzliche Optionen werden durch Gedrückthalten der Zeile angezeigt. Mit \"Be
   <string name="pa_pie_status_title">Statusfarbe</string>
   <string name="pa_pie_chevron_left_title">Farbe des linken Chevron</string>
   <string name="pa_pie_chevron_right_title">Farbe des rechten Chevron</string>
-  <string name="pa_pie_juice_title">Battery juice color</string>
+  <string name="pa_pie_juice_title">Batterie saft farbe</string>
   <string name="pa_pie_button_color">Schaltflächenfarbe</string>
   <string name="pa_pie_button_color_title">Schaltflächenfarbe</string>
   <string name="pa_pie_gap_title">Objektzwischenraum</string>
@@ -1130,13 +1131,13 @@ Zusätzliche Optionen werden durch Gedrückthalten der Zeile angezeigt. Mit \"Be
   <string name="pa_pie_stick_summary">Avoids orientation change when screen rotates</string>
   <string name="pa_pie_search_title">Suchknopf</string>
   <string name="pa_pie_search_summary">Enable search button on pie controls</string>
-  <string name="pa_pie_trigger_title">Trigger area</string>
-  <string name="pa_pie_trigger_summary">Determine the size of the region that registers swipes</string>
-  <string name="pa_pie_trigger_none">None (Pie disabled)</string>
+  <string name="pa_pie_trigger_title">Auslösebereich</string>
+  <string name="pa_pie_trigger_summary">Lege den Auslösebereich fest</string>
+  <string name="pa_pie_trigger_none">Keiner (Pie deaktiviert)</string>
   <string name="pa_pie_trigger_huge">Sehr groß</string>
   <string name="pa_pie_notifications_title">Enable Chevron Targets</string>
   <string name="pa_pie_notifications_summary">Enabling this will let the Notification panel and QuickSettings tiles become available when swiping</string>
-  <string name="pa_pie_menu_title">Always show menu button</string>
+  <string name="pa_pie_menu_title">Menü-Taste immer anzeigen</string>
   <string name="pa_pie_menu_summary">Whether or not the menu button should always be shown, even when its not needed</string>
   <string name="pa_pie_restart_launcher_title">Launcher neu starten</string>
   <string name="pa_pie_restart_launcher_summary">Changing screensize can have adverse effects. This option allows your launcher to regain sanity, the cost is a slight blackout (recommended)</string>
@@ -1324,7 +1325,7 @@ Zusätzliche Optionen werden durch Gedrückthalten der Zeile angezeigt. Mit \"Be
   <string name="battery_saver_network_cdma_title">CDMA Netze</string>
   <string name="battery_saver_system_title">Systemeinstellungen</string>
   <string name="development_shortcut_title">Entwickler Verknüpfung</string>
-  <string name="development_shortcut_summary">Aktivieren Sie \"Daten löschen\" und \"schließen erzwingen\" Option im Infobereich und zuletzt verwendete Anwendungs Liste</string>
+  <string name="development_shortcut_summary">Enable application management shortcuts in notification area and recent apps list</string>
   <string name="custom_runtime_warning_title">Warnung</string>
   <string name="custom_runtime_warning_message">ART wird von dieser Rom nicht unterstützt. Diese Einstellung ist experimentell und nur für Entwickler gedacht. Sie kann zu Instabilitäten, Abstürzen oder Datenverlust führen oder verhindern, dass Ihr Gerät startet. Besuchen Sie &lt;a href=\"http://source.android.com/devices/tech
 /dalvik/art.html\"&gt;Introducing ART&lt;/a&gt; für mehr Informationen.&lt;br/&gt;&lt;br/&gt;Melden Sie keine Fehler, wenn Sie ART als Laufzeitumgebung aktiviert haben.&lt;br/&gt;&lt;br/&gt;Sind Sie sicher, dass Sie das Gerät neu starten wollen, um die Laufzeitumgebung von <xliff:g id="old" example="libdvm.so">%1$s</xliff:g>
@@ -1533,7 +1534,7 @@ auf <xliff:g id="new" example="libart.so">%2$s</xliff:g> zu ändern?</string>
   <string name="custom_system_icon_color_title">Benutzerdefinierte System-Icon Farbe</string>
   <string name="system_icon_color">Icon-Farbe</string>
   <string name="custom_color_summary">Überschreibe System Farbe</string>
-  <string name="custom_status_bar_apply_title">Bestätige</string>
+  <string name="custom_status_bar_apply_title">Anwenden</string>
   <string name="custom_status_bar_apply_summary">Starte System UI neu, damit Änderungen wirksam werden</string>
   <string name="status_bar_battery_cat_title">Akku</string>
   <string name="battery_bar_title">Akku Anzeige</string>
@@ -2081,7 +2082,7 @@ auf <xliff:g id="new" example="libart.so">%2$s</xliff:g> zu ändern?</string>
   <string name="heavy_title">Schwer</string>
   <string name="medium_title">Mittel</string>
   <string name="light_title">Hell</string>
-  <string name="extra_light_title">Extra Licht</string>
+  <string name="extra_light_title">Extra Leicht</string>
   <string name="overscroll_title">Overscroll Effekt</string>
   <string name="overscroll_summary">Bestimme wie scrollbare Objekte aussehen, wenn sie überzogen werden</string>
   <string name="overscroll_weight_title">Overscrolling Gewicht</string>
@@ -2098,4 +2099,7 @@ auf <xliff:g id="new" example="libart.so">%2$s</xliff:g> zu ändern?</string>
   <string name="wifi_ap_client_ap_disabled">Hotspot deaktiviert</string>
   <string name="wifi_ap_client_none_connected">Keine Geräte angeschlossen</string>
   <string name="nav_bar_title">Navigationsleiste</string>
+  <string name="sar_info">Maximum SAR</string>
+  <string name="maximum_head_level">Head: %1$s W/kg</string>
+  <string name="maximum_body_level">Body: %1$s W/kg</string>
 </resources>
