--- a/res/values-el/liquid_strings.xml
+++ b/res/values-el/liquid_strings.xml
@@ -843,6 +843,7 @@
   <string name="title_tile_wifiap">Φορητό σημείο πρόσβασης Wi-Fi</string>
   <string name="title_tile_wifi">Wi-Fi</string>
   <string name="title_tile_user">Εναλλαγή χρήστη</string>
+  <string name="title_tile_network_adb">Εντοπισμός σφαλμάτων μέσω δικτύου</string>
   <string name="title_tile_networkmode">Δίκτυο</string>
   <string name="title_tile_nfc">NFC</string>
   <string name="title_tile_screen_timeout">Χρ. όριο οθόνης</string>
@@ -1358,7 +1359,7 @@
   <string name="battery_saver_network_cdma_title">CDMA δίκτυα</string>
   <string name="battery_saver_system_title">Σύστημα επιλογές</string>
   <string name="development_shortcut_title">Συντόμευση για προγραμματιστές</string>
-  <string name="development_shortcut_summary">Ενεργοποίηση των επιλογών \'εκκαθάριση δεδομένων\' και \'αναγκαστική διακοπή\' στην περιοχή ειδοποιήσεων και στη λίστα πρόσφατων εφαρμογών</string>
+  <string name="development_shortcut_summary">Enable application management shortcuts in notification area and recent apps list</string>
   <string name="custom_runtime_warning_title">Προειδοποίηση</string>
   <string name="custom_runtime_warning_message">Το ART δεν υποστηρίζεται από το liquidsmooth. Η ρύθμιση αυτή περιλαμβάνεται μόνο για πειραματισμό και μπορεί να προκαλέσει αστάθεια, κολλήματα, απώλεια δεδομένων ή να αποτρέψει τη σωστή εκκίνηση της συσκευής σας. Επισκευθείτε το &lt;a href=\"http://source.android.com/devices/tech/dalvik/art.html\"&gt;Introducing ART&lt;/a&gt; για περισσότερες πληροφορίες.&lt;br/&gt;&lt;br/&gt;Σας παρακαλούμε να μην υποβάλλετε αναφορές σφαλμάτων, αν έχετε ενεργοποιημένο το ART ως runtime.&lt;br/&gt;&lt;br/&gt;Είστε βέβαιοι ότι θέλετε να κάνετε επανεκκίνηση για να αλλάξει το runtime από <xliff:g id="old" example="libdvm.so">%1$s</xliff:g> σε <xliff:g id="new" example="libart.so">%2$s</xliff:g>;?</string>
   <string name="rominfo_settings_list_item_title">LiquidSmooth στατιστικές</string>
@@ -2156,6 +2157,8 @@
   <string name="overscroll_summary">Choose how scrollable objects look when they overshoot</string>
   <string name="overscroll_weight_title">Over scrolling weight</string>
   <string name="overscroll_weight_summary">Select the weight of the scrollable objects</string>
+  <string name="disable_carrier_logo">Enable carrier logo</string>
+  <string name="carrier_logo_summary">Shows carrier logo in status bar</string>
   <string name="liquid_settings_title">LiquidSmooth</string>
   <string name="liquid_sound_title">LiquidSmooth sound</string>
   <string name="liquid_sound_summary">All sound related settings that we have added</string>
@@ -2168,4 +2171,7 @@
   <string name="wifi_ap_clients_title">Connected devices</string>
   <string name="wifi_ap_client_ap_disabled">Hotspot is disabled</string>
   <string name="wifi_ap_client_none_connected">No devices connected</string>
+  <string name="sar_info">Maximum SAR</string>
+  <string name="maximum_head_level">Head: %1$s W/kg</string>
+  <string name="maximum_body_level">Body: %1$s W/kg</string>
 </resources>
