--- a/res/values-ko/liquid_strings.xml
+++ b/res/values-ko/liquid_strings.xml
@@ -72,7 +72,7 @@
   <string name="set">설정</string>
   <string name="gesture_anywhere_title">제스처 적용 anywhere</string>
   <string name="gesture_anywhere_summary">사용자 지정 스크린 제스처 액티브</string>
-  <string name="gesture_anywhere_enabled_title">제스처 적용 anywhere</string>
+  <string name="gesture_anywhere_enabled_title">어디든 제스처를 적용</string>
   <string name="gesture_anywhere_enabled_summary">어디서나 사용 제스처 활성화</string>
   <string name="gesture_anywhere_position_title">Loction</string>
   <string name="gesture_anywhere_position_left">왼쪽 가장자리</string>
@@ -737,7 +737,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
   <string name="lockscreen_style_reset_message">모든 잠금 화면 색상을 재설정?</string>
   <string name="lockscreen_icon_title">잠금 핸들 아이콘</string>
   <string name="lockscreen_lock_icon_custom">사용자 지정 아이콘</string>
-  <string name="lockscreen_lock_icon_liquid">물방울 아이콘</string>
+  <string name="lockscreen_lock_icon_liquid">Liquid 아이콘</string>
   <string name="lockscreen_lock_icon_default">기본 아이콘</string>
   <string name="lockscreen_colorize_handle_title">사용자 지정 핸들 색상화</string>
   <string name="lockscreen_colorize_handle_summary">잠금 색상 잠금 핸들 설정</string>
@@ -840,6 +840,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
   <string name="title_tile_wifiap"> 와이파이 핫스팟</string>
   <string name="title_tile_wifi">와이파이</string>
   <string name="title_tile_user">사용자 전환  </string>
+  <string name="title_tile_network_adb">네트워크를 통한 ADB</string>
   <string name="title_tile_networkmode">네트워크 모드</string>
   <string name="title_tile_nfc">NFC</string>
   <string name="title_tile_screen_timeout">화면 시간 제한</string>
@@ -1354,12 +1355,12 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
   <string name="battery_saver_network_cdma_title">CDMA 네트워크</string>
   <string name="battery_saver_system_title">시스템 옵션</string>
   <string name="development_shortcut_title">개발 바로 가기</string>
-  <string name="development_shortcut_summary">\'데이터 지우기\' 및 \'강제로 닫기\' 옵션 알림 영역에 최근 애플 리 케이 션 목록</string>
+  <string name="development_shortcut_summary">Enable application management shortcuts in notification area and recent apps list</string>
   <string name="custom_runtime_warning_title">경고</string>
   <string name="custom_runtime_warning_message">리퀴드롬은 ART를 정식으로 지원하지 않습니다. 이 설정은 실험적인 요소로 포함되어 있으며 불안정, 충돌, 데이터 손실 등을 야기하거나 기기를 켜지지 않게 할 수도 있습니다. 자세한 정보는 &lt;a href=\"http://source.android.com/devices/tech/dalvik/art.html\"&gt;Introducing ART&lt;/a&gt;에서 확인할 수 있습니다.&lt;br/&gt;&lt;br/&gt;ART를 런타임으로 사용할 경우 버그 리포트를 제출하지 말아주십시오.&lt;br/&gt;&lt;br/&gt;시스템을 재시작하여 런타임을 <xliff:g id="old" example="libdvm.so">%1$s</xliff:g>에서 <xliff:g id="new" example="libart.so">%2$s</xliff:g>로 변경하시겠습니까?</string>
-  <string name="rominfo_settings_list_item_title">물방울롬 통계</string>
-  <string name="rominfo_settings_list_item_summary">익명 통계 보고를 보내서 물방울롬를 발전할 수 있게 해주세요</string>
-  <string name="liquidsmoothupdate_settings_title">물방울롬 업데이트</string>
+  <string name="rominfo_settings_list_item_title">LiquidSmooth 롬 통계</string>
+  <string name="rominfo_settings_list_item_summary">익명 통계 보고를 보내서 LiquidSmooth롬를 발전할 수 있게 해주세요</string>
+  <string name="liquidsmoothupdate_settings_title">LiquidSmooth롬 업데이트</string>
   <string name="liquidsmoothupdate_settings_summary">보기 또는 업데이트 설치 확인</string>
   <string name="vibrator_multiplier_title">진동 승수</string>
   <string name="lockscreen_notification_title">알림 사용</string>
@@ -1705,8 +1706,8 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
   <string name="halo_size_small">작은</string>
   <string name="halo_size_default">보통 (기본값)</string>
   <string name="halo_size_large">큰</string>
-  <string name="halo_size_gigantic">거 대 한</string>
-  <string name="halo_size_monster">엄청큰</string>
+  <string name="halo_size_gigantic">거대한</string>
+  <string name="halo_size_monster">엄청 큰</string>
   <string name="halo_notification_count_title">알림 카운트</string>
   <string name="halo_notification_count_summary">현재 알림 카운트 표시</string>
   <string name="halo_notification_count_none">없음</string>
@@ -2063,16 +2064,16 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
   <string name="lock_pattern_size_8">8 x 8</string>
   <string name="lock_pattern_size_9">9 x 9</string>
   <string name="lock_pattern_size_10">10:10</string>
-  <string name="download_category">물방울롬 다운로드</string>
+  <string name="download_category">LiquidSmooth롬 다운로드</string>
   <string name="download_category_summary">모든 내부 지원 요구를 찾아</string>
   <string name="rom_category">롬 다운로드</string>
   <string name="gapps_category">갭스 패키지</string>
   <string name="xposed_category">Xposed 프레임 워크</string>
-  <string name="lsgapps_title">물방울롬 갭스</string>
-  <string name="lsgapps_summary">물방울롬 갭스를 물방울롬에 사용하기 위해 일반적으로 권장합니다.</string>
-  <string name="ls_official_title">물방울롬 릴리즈 빌드 </string>
-  <string name="ls_official_summary">물방울롬의 안정된 빌드 다운로드 링크.</string>
-  <string name="ls_nightly_title">물방울롬 매일 빌드.</string>
+  <string name="lsgapps_title">LiquidSmooth롬 GApps</string>
+  <string name="lsgapps_summary">LiquidSmooth롬 GApps를 LiquidSmooth롬에 사용하기 위해 일반적으로 권장합니다.</string>
+  <string name="ls_official_title">LiquidSmooth롬 릴리즈 빌드</string>
+  <string name="ls_official_summary">LiquidSmooth롬의 스테이블 롬 다운로드 링크.</string>
+  <string name="ls_nightly_title">LiquidSmooth롬 나이틀리 빌드.</string>
   <string name="ls_nightly_summary">불안정한 롬의 링크.</string>
   <string name="pagapps_title">PA 갭스</string>
   <string name="pagapps_summary">완전히 GAPPS 대부분 포장,이 일반적으로 사용 하지 않으려면 다운로드/설치 그들 나중에 사용자가</string>
@@ -2152,8 +2153,10 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
   <string name="overscroll_summary">어떻게 스크롤할 수 있는 개체를 선택할 때 그들 오버 슈트</string>
   <string name="overscroll_weight_title">무게를 스크롤 하는 동안</string>
   <string name="overscroll_weight_summary">스크롤할 수 있는 개체의 두께 선택</string>
-  <string name="liquid_settings_title">물방울롬</string>
-  <string name="liquid_sound_title">물방울롬 사운드</string>
+  <string name="disable_carrier_logo">Enable carrier logo</string>
+  <string name="carrier_logo_summary">Shows carrier logo in status bar</string>
+  <string name="liquid_settings_title">LiquidSmooth</string>
+  <string name="liquid_sound_title">LiquidSmooth롬 소리</string>
   <string name="liquid_sound_summary">모든 사운드 관련된 설정을 추가 했습니다.</string>
   <string name="adaptive_backlight_title">적응형 백라이트</string>
   <string name="adaptive_backlight_summary">지능적으로 디스플레이의 백라이트 밝기를 변화 하 고 배터리 수명을 최대화 하는 데 도움이</string>
@@ -2164,4 +2167,7 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
   <string name="wifi_ap_clients_title">연결 된 장치</string>
   <string name="wifi_ap_client_ap_disabled">핫스팟 사용 하지 않도록 설정</string>
   <string name="wifi_ap_client_none_connected">연결 장치</string>
+  <string name="sar_info">Maximum SAR</string>
+  <string name="maximum_head_level">Head: %1$s W/kg</string>
+  <string name="maximum_body_level">Body: %1$s W/kg</string>
 </resources>
